tests/cpp_test_suite_golden_override/error.std_parseYaml1.jsonnet.golden
runtime error: failed to parse yaml: error: line 1 column 5: mapping values are not allowed in this context
 --> <input>:1:5
  |
1 | a: b:
  |     ^ mapping values are not allowed in this context
    error.std_parseYaml1.jsonnet:1:14-22: function <builtin_parse_yaml> call